# notes-sharing-webapp

./: .gitignore  README.md  backend_config.json  dev-docker-compose.yml  docker-compose.yml  frontend_config.json
backend/: .env  .gitignore  Dockerfile  pyproject.toml  requirements.txt  run.py  wsgi.py
backend/flaskapp/: __init__.py  caching.py  config.py  db_models.py  exceptions.py  utils.py
backend/flaskapp/main/: model.py  routes.py  service.py
backend/flaskapp/notes/: model.py  routes.py  service.py
backend/flaskapp/users/: messages.py  model.py  routes.py  service.py  utils.py
backend/tests/: conftest.py  test_main_bp.py  test_main_model.py  test_main_service.py  test_notes_bp.py  test_notes_model.py  test_redis_caching.py  test_users_bp.py  test_users_model.py  test_utils.py
frontend/: .gitignore  Dockerfile  Dockerfile-dev  activate.bat  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.vue  main.js  store.js
frontend/src/assets/: base.css  main.css
frontend/src/components/accountpage/: Content.vue
frontend/src/components/homepage/: Content.vue  HeroSection.vue  HeroSkeleton.vue  SectionOne.vue  SectionThree.vue  SectionTwo.vue
frontend/src/router/: index.js
frontend/src/utils/: errorHandler.js  helper.js  validation.js
frontend/src/views/: AccountView.vue  HomeView.vue  LogInView.vue  NotesView.vue  PageNotFound.vue  ResetPasswordView.vue  SignUpView.vue  SingleNoteView.vue  UserProfileView.vue
test/: activate.bat  conftest.py  pyproject.toml  requirements.txt  test_api.py
(+24 files in other folders)
