[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "async-timeout==5.0.1",
    "bcrypt==4.2.1",
    "blinker==1.9.0",
    "click==8.1.8",
    "colorama==0.4.6",
    "flask==3.1.0",
    "flask-bcrypt==1.0.1",
    "flask-cors==5.0.0",
    "flask-jwt-extended==4.7.1",
    "flask-mail==0.10.0",
    "flask-sqlalchemy==3.1.1",
    "greenlet==3.1.1",
    "itsdangerous==2.2.0",
    "jinja2==3.1.5",
    "markupsafe==3.0.2",
    "pyjwt==2.10.1",
    "redis==5.2.1",
    "sqlalchemy==2.0.38",
    "typing-extensions==4.12.2",
    "werkzeug==3.1.3",
]
